--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://linhkhanh.github.io/portfolio",
+  "homepage": "https://linhkhanh.github.io/portfolio",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
